<resources>
    <string name="app_name">PSUTPool</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="ex_07xxxxxxxx">EX:07XXXXXXXX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="Login">Login</string>
    <string name="Anyone">Anyone</string>
    <string name="driver">Driver</string>
    <string name="back">Back</string>
    <string name="uni_map">Uni Map</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have An Account ?? Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_address">Your Address</string>
    <string name="preferred_driver">Preferred</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="university_id">University ID</string>
    <string name="captain">Captain</string>
    <string name="pub_map">Pub Map</string>
    <string name="profile">Profile</string>
    <string name="start_driving">Start Driving</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_rides">My Rides</string>
    <string name="wallet">Wallet</string>
    <string name="contact_us">Contact Us</string>
    <string name="verification_code">Verification Code</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="packages">Packages</string>
    <string name="buy_a_package">Buy a package</string>
    <string name="psut_coins">PSUT Coins</string>
    <string name="_1_jd">1 JD</string>
    <string name="account_type">Account Type</string>
    <string name="basic">Basic</string>
    <string name="change_your_account_type">Change your Account type</string>
    <string name="is_this_your_number">Is This Your Number?</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="APIKey">AIzaSyAviOlzcFhIac8VYwlXJ8g__oLjoVlfE2w</string>
    <string name="draw_route">Draw Route</string>
    <string name="car_id">Car ID</string>
    <string name="kml_url">http://www.google.com/maps/d/u/0/kml?forcekml=1&amp;mid=1V05Id_8S6e3bgsLJxMkOqKDz3rvHRydY&amp;lid=1EcbAHbYpco</string>
    <string name="car_type">Car Type</string>
    <string name="car_model">Car Model</string>
    <string name="car_color">Car Color</string>
    <string name="test">test</string>
    <string name="search_location">Search Location</string>
    <string name="start">Start</string>
    <string name="call">Call</string>
    <string name="add_to_group">Add to Group</string>
    <string name="rate">Rate</string>
    <string name="showing_recent_rides">Showing Recent Rides</string>
    <string name="ride_history">Ride History</string>
    <string name="confirm_trip">Confirm Trip</string>
    <string name="deny_trip">Deny Trip</string>
    <string name="look_up">Look-Up</string>
    <string name="first_floor">First Floor</string>
    <string name="queen_rania_center_for_entrepreneurship">Queen Rania Center for Entrepreneurship</string>
    <string name="mezzanine_floor">Mezzanine Floor</string>
    <string name="center_consultation_and_training">Center Consultation and Training</string>
    <string name="second_floor">Second Floor</string>
    <string name="head_of_ba_department_office_921_922_classrooms">Head of BA Department Office, 921 – 922 Classrooms</string>
    <string name="third_floor">Third Floor</string>
    <string name="e_marketing_and_ba_doctors_offices">E-marketing and BA Doctors Offices</string>
    <string name="building_b">Building B</string>
    <string name="building_d">Building D</string>
    <string name="building_b_library">Building B Library</string>
    <string name="dean_of_business_office_bit_lab">Dean of Business Office, BIT Lab</string>
    <string name="_821_822_classrooms_accounting_doctors_offices">821+822 Classrooms, Accounting Doctors Offices</string>
    <string name="fourth_floor">Fourth Floor</string>
    <string name="_831_832_classrooms_bit_doctors_offices">831+832 Classrooms, BIT Doctors Offices</string>
    <string name="study_lounge_and_study_rooms">Study Lounge and Study Rooms</string>
    <string name="reception_book_borrowing">Reception, Book Borrowing</string>
    <string name="animation_labs_computer_science_doctors_offices_animation_doctors_offices">Animation Labs, Computer Science Doctors Offices, Animation Doctors Offices</string>
    <string name="fifth_floor">Fifth Floor</string>
    <string name="software_engineering_doctors_offices">Software Engineering Doctors Offices</string>
    <string name="_201_208_classes">201–208 Classes</string>
    <string name="al_sadaqa_theater">Al-Sadaqa Theater</string>
    <string name="_101_107_labs">101 -107 Labs</string>
    <string name="_102e_107e">102E -107E</string>
    <string name="ibn_al_shater_pc_lab_louai_shammout_theater">Ibn Al-Shater, PC-Lab, Louai Shammout Theater</string>
    <string name="workshop_301_308_342_343_classes">Workshop, 301–308 + 342–343 Classes</string>
    <string name="enter_code">Enter Code</string>
    <string name="submit_code">Submit Code</string>
    <string name="uni_bus">Uni Bus</string>
    <string-array name="Spn">
        <item>@string/Anyone</item>
        <item>@string/female</item>
        <item>@string/Male</item>
    </string-array>
</resources>
