<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLayoutBuilingD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/dd"
        android:contentDescription="@string/building_d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/first_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/queen_rania_center_for_entrepreneurship"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/mezzanine_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/center_consultation_and_training"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/second_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/head_of_ba_department_office_921_922_classrooms"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/third_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/e_marketing_and_ba_doctors_offices"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>