<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLayoutIT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/it"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/first_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/_101_107_labs"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/second_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/al_sadaqa_theater"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/third_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/_201_208_classes"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/fourth_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/software_engineering_doctors_offices"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/fifth_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/animation_labs_computer_science_doctors_offices_animation_doctors_offices"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>