<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLayoutEng"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/eng1"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/first_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/_102e_107e"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/second_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/ibn_al_shater_pc_lab_louai_shammout_theater"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:text="@string/third_floor"
            android:textColor="@color/main_text_color"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/workshop_301_308_342_343_classes"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>