<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EDF3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.StartActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_backgroud" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtPhoneNumberStart"
        android:layout_centerInParent="true"
        android:text="@string/please_enter_your_phone_number"
        android:textColor="#113e56"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtPhoneNumberStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/ex_07xxxxxxxx"
        android:inputType="number"
        android:textColorHint="#113E56"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnConfirmStart"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhoneNumberStart"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/button_shape_corners"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp" />
</RelativeLayout>

